# IntelliFi

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
backend/insightface/: model.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20250227194615_init/: migration.sql
backend/risc0/privacy-zkp/host/: Cargo.toml
backend/risc0/privacy-zkp/host/examples/: spend.rs
backend/risc0/privacy-zkp/host/src/: lib.rs  main.rs
backend/risc0/privacy-zkp/methods/: Cargo.toml  build.rs
backend/risc0/privacy-zkp/methods/guest/: Cargo.toml
backend/risc0/privacy-zkp/methods/guest/src/: main.rs  pedersen.rs  types.rs
backend/risc0/privacy-zkp/methods/src/: lib.rs
backend/src/: bookmarklet.js
backend/src/privacy/: index.ts  test-contract.ts  test-link.ts  test.ts
backend/src/privacy/contract/: index.ts
backend/src/privacy/link/: claim-service.ts  index.ts
backend/src/privacy/merkle/: db.ts  index.ts
backend/src/privacy/nullifier/: index.ts
backend/src/privacy/risc0/: index.ts
backend/src/privacy/types/: index.ts
backend/src/privacy/zkp/: README.md  index.ts  mock.ts  native.d.ts
backend/src/privacy/zkp/native/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json  privacy-zkp-native.darwin-arm64.node  test.js
backend/src/privacy/zkp/native/src/: lib.rs
backend/tangle-avs/: Cargo.toml  Dockerfile  README.md  settings.env
backend/tangle-avs/contracts/src/: FaceVerifier.sol  TangleTaskManager.sol
backend/tangle-avs/db/: 01891385-226b-4681-b064-bcc87014c308  29b5f4fe-6a8a-44ec-9d82-fcd075bf9271  527c59d5-c658-4208-9e55-48d12cb855be  e3c9df65-53ba-45f8-ac08-1f8d91e49010
backend/tangle-avs/src/: lib.rs  main.rs
backend/tangle-avs/tests/: integration.rs
backend/tangle-avs/tests/integration/: event_listener_test.rs
backend/tangle-avs/tests/unit/: face_verifier_test.rs  merkle_tree_test.rs
src/components/: FaceProcessor.tsx  Layout.tsx
src/contracts/: FaceRegistar.sol
src/hooks/: useFaceProcessing.ts
src/pages/: Home.tsx
