[package]
name = "drew-v"
version = "0.1.0"
edition = "2021"
description = "t"
authors = ["Teja Reddy <narasimteja@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "t"
repository = "https://github.com/t/drew-v"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
# Gadget
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", default-features = false, features = ["std", "eigenlayer", "evm", "macros", "build"] }
serde = { version = "1.0", features = ["derive"] }
risc0-zkvm = { version = "0.19.1", features = ["std"] }
rand = "0.8"
url = "2.4"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["std"] }
bincode = "1.3"
hex = "0.4"
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
hex = "0.4"

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget.git", default-features = false, features = ["std", "build"] }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "drew-v"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "FaceVerifier" }

[[package.metadata.gadget.Native.sources]]
owner = "t"
repo = "drew-v"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-drew-v-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-drew-v-gadget" },
]
