[package]
name = "privacy-zkp-host"
version = "0.1.0"
edition = "2021"

[dependencies]
privacy-zkp-methods = { path = "../methods" }
risc0-zkvm = { version = "1.3.0-rc.1" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
rand = "0.8"
bincode = "1.3.3"
hex = "0.4"
