[package]
name = "privacy-zkp-methods"
version = "0.1.0"
edition = "2021"

[dependencies]
privacy-zkp-methods-guest = { path = "guest" }
risc0-zkvm = "1.3.0-rc.1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
risc0-build = { version = "1.3.0-rc.1" }

[package.metadata.risc0]
methods = ["guest"]
