[package]
name = "privacy-zkp-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.3.0-rc.1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
rand_core = "0.6"
lazy_static = "1.4"
