[package]
name = "privacy-zkp-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12", features = ["async"] }
napi-derive = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
rand = "0.8"
sha2 = "0.10"

[build-dependencies]
napi-build = "2.0.1" 